xplat compiles, fabric doesn't